<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.flowlogix</groupId>
    <artifactId>flowlogix</artifactId>
    <version>4.0.5</version>
    <packaging>pom</packaging>
    <name>Flow Logix Root</name>
    <description>Flow Logix Utility Library Root POM</description>

    <url>https://github.com/flowlogix/flowlogix</url>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>lprimak</id>
            <name>Lenny Primak</name>
            <email>lenny@flowlogix.com</email>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <gpg.keyname>Flow Logix, Inc.</gpg.keyname>
        <docs.phase>deploy</docs.phase>
        <payara.start.skip>${skipITs}</payara.start.skip>
        <auto.release>true</auto.release>
    </properties>

    <modules>
        <module>flowlogix-bom</module>
        <module>jakarta-ee</module>
        <module>tapestry</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.commonjava.maven.plugins</groupId>
                <artifactId>directory-maven-plugin</artifactId>
                <version>0.3.1</version>
                <executions>
                    <execution>
                        <id>directories</id>
                        <goals>
                            <goal>directory-of</goal>
                        </goals>
                        <phase>validate</phase>
                        <configuration>
                            <property>flowlogix.basedir</property>
                            <project>
                                <groupId>com.flowlogix</groupId>
                                <artifactId>flowlogix</artifactId>
                            </project>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>1.12.1</version>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.groovy</groupId>
                        <artifactId>groovy-all</artifactId>
                        <version>3.0.8</version>
                        <scope>runtime</scope>
                        <type>pom</type>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>testGroups</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <scripts>
                                <!-- combine individual test profiles into a single test group property -->
                                <script>
                                    <![CDATA[
                                    def groups = System.getProperty 'maven.test.property.profiles'
                                    if (!groups) {
                                        groups = 'none(),'
                                        (project.activeProfiles).each{ profile ->
                                            def test_group = profile.properties.test_groups
                                            if (test_group) {
                                                groups += test_group + ","
                                            }
                                        }
                                        project.properties.groups = groups.substring(0, groups.length() - 1)
                                        System.setProperty 'maven.test.property.profiles', project.properties.groups
                                    } else {
                                        project.properties.groups = groups
                                    }
                                    ]]>
                                </script>
                            </scripts>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.soebes.maven.plugins</groupId>
                <artifactId>echo-maven-plugin</artifactId>
                <version>0.4.0</version>
                <executions>
                    <execution>
                        <id>echo test groups</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>echo</goal>
                        </goals>
                        <configuration>
                            <echos>
                                <echo>Test Groups (Tags): ${groups}</echo>
                            </echos>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-Xlint:deprecation</arg>
                            <arg>-Xlint:unchecked</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <parallel>all</parallel>
                        <threadCount>10</threadCount>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <executions>
                        <execution>
                            <id>integration-test</id>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <parallel>all</parallel>
                        <threadCount>10</threadCount>
                        <systemPropertyVariables>
                            <arquillian.launch>${arquillian.launch}</arquillian.launch>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>${docs.phase}</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.3.0</version>
                    <configuration>
                        <doclint>all,-reference</doclint>
                        <overview>${project.basedir}/src/main/java/overview.html</overview>
                        <sourcepath>${project.build.directory}/generated-sources/delombok</sourcepath>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>${docs.phase}</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok-maven-plugin</artifactId>
                    <version>1.18.20.0</version>
                    <configuration>
                        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
                        <addOutputDirectory>false</addOutputDirectory>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>delombok</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>default-deploy</id>
                            <phase>none</phase>
                        </execution>
                        <execution>
                            <id>deploy</id>
                            <goals>
                                <goal>deploy</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <pushChanges>false</pushChanges>
                        <localCheckout>true</localCheckout>
                        <preparationGoals>validate</preparationGoals>
                        <releaseProfiles>release-flowlogix-prod</releaseProfiles>
                        <tagNameFormat>Version-@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>1.6.8</version>
                    <extensions>true</extensions>
                    <configuration>
                        <serverId>flowlogix-maven-central</serverId>
                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                        <autoReleaseAfterClose>${auto.release}</autoReleaseAfterClose>
                    </configuration>
                    <dependencies>
                        <!--
                          TODO:
                            Remove after OSSRH-66257, NEXUS-26993 are fixed,
                            possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
                        -->
                        <dependency>
                            <groupId>com.thoughtworks.xstream</groupId>
                            <artifactId>xstream</artifactId>
                            <version>1.4.15</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.0.1</version>
                    <configuration>
                        <keyname>${gpg.keyname}</keyname>
                        <passphraseServerId>${gpg.keyname}</passphraseServerId>
                    </configuration>
                    <executions>
                        <execution>
                            <id>sign-artifacts</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>sign</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>payara-server-remote</id>
            <properties>
                <payara.start.skip>true</payara.start.skip>
            </properties>
        </profile>
        <profile>
            <id>payara-docker</id>
            <properties>
                <payara.start.skip>true</payara.start.skip>
                <arquillian.launch>payara-docker</arquillian.launch>
            </properties>
        </profile>
        <profile>
            <id>stress-test</id>
            <properties>
                <test_groups>StressTest</test_groups>
            </properties>
        </profile>
        <profile>
            <id>ui-test</id>
            <properties>
                <test_groups>UserInterface</test_groups>
            </properties>
        </profile>
        <profile>
            <id>all-tests</id>
            <properties>
                <test_groups>any()</test_groups>
            </properties>
        </profile>
        <profile>
            <id>checkstyle</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>3.1.2</version>
                        <executions>
                            <execution>
                                <phase>validate</phase>
                                <goals>
                                    <goal>checkstyle</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <configLocation>${flowlogix.basedir}/checkstyle/checkstyle.xml</configLocation>
                            <suppressionsLocation>${flowlogix.basedir}/checkstyle/suppressions.xml</suppressionsLocation>
                            <headerLocation>${flowlogix.basedir}/checkstyle/ClassHeader.txt</headerLocation>
                            <enableRSS>false</enableRSS>
                            <linkXRef>true</linkXRef>
                            <consoleOutput>true</consoleOutput>
                            <failsOnError>true</failsOnError>
                            <failOnViolation>true</failOnViolation>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                            <enableRulesSummary>true</enableRulesSummary>
                            <propertyExpansion>flowlogix.basedir=${flowlogix.basedir}</propertyExpansion>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>com.puppycrawl.tools</groupId>
                                <artifactId>checkstyle</artifactId>
                                <version>8.36</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release-flowlogix-prod</id>
            <properties>
                <docs.phase>package</docs.phase>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk11plus</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <configuration>
                                <argLine>-Xshare:off</argLine>
                            </configuration>
                        </plugin>
                        <plugin>
                            <artifactId>maven-failsafe-plugin</artifactId>
                            <configuration>
                                <argLine>
                                    --add-opens java.base/java.lang=ALL-UNNAMED
                                </argLine>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

    <scm>
        <url>https://github.com/flowlogix/flowlogix</url>
        <connection>scm:git:git@github.com:flowlogix/flowlogix.git</connection>
        <developerConnection>scm:git:git@github.com:flowlogix/flowlogix.git</developerConnection>
        <tag>Version-4.0.5</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>flowlogix-maven-central</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>flowlogix-maven-central</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
